fix(console): rm mfa link, policy issues, consistency for table spacing (#585)
* rm console.logs

* fix application table

* fix project table padding

* rm user mfa link

* disable policy saving without desc

* lint

--- a/console/src/app/pages/projects/owned-projects/owned-project-list/owned-project-list.component.scss
+++ b/console/src/app/pages/projects/owned-projects/owned-project-list/owned-project-list.component.scss
@@ -70,9 +70,12 @@ h1 {
 
     td,
     th {
+      padding-left: .5rem;
+      padding-right: .5rem;
+
       &:first-child {
         padding-left: 0;
-        padding-right: 1rem;
+        padding-right: .5rem;
       }
 
       &:last-child {
